--- a/aula11/style.css
+++ b/aula11/style.css
@@ -1,19 +1,29 @@
 body {
     font: normal 12pt Arial;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 251, 0);
+    width: 100vw;
+    height: 100vh;
 }
+
+input {
+    font: normal 12pts Arial;
+    width: 80px;
+}
+
+div#content {
+    margin-top: 10rem;
+    margin-left: 30rem;
+    width: 350px;
+    height: 150px;
+}
+
 p {
     font: bold 16pt Arial;
     padding-top: 10px;
 }
-div#content {
-    background: #6db2f3;
-    width: 350px;
-    height: 150px;
-    margin-top: -15px;
-    margin-left: -3px;
-    padding-left: 10px;
-}
+
 p#res {
    font: normal 12pt Arial;
 }
